Agrego restriccion, no puede registrarse un profesor si el dni esta repetido

--- a/src/main/resources/templates/asistencia_clase.html
+++ b/src/main/resources/templates/asistencia_clase.html
@@ -98,7 +98,7 @@
       </nav>
       <div class="jumbotron jumbotron">
         <div class="container">
-          <h1 class="display-5" th:text=" 'Asistencias de la clase ' + ${clase.nombreDep}"></h1>
+          <h1 class="display-5" th:text=" 'Asistencias de la clase: ' + ${clase.nombreDep}"></h1>
         </div>
       </div>
     </div>
