Agrego año e icono al boton de pdf

--- a/src/main/resources/templates/asistencia_clase.html
+++ b/src/main/resources/templates/asistencia_clase.html
@@ -72,7 +72,7 @@
         console.log("current year: " , anioValue);
         console.log("current month: " , mesValue);
         $('#pdfButton').html(
-          '<a href="' + link + (mesValue) +'">...</a>'
+          '<a class= "btn btn-secondary" href="' + link + (mesValue) + `/` +(anioValue)+'"><i class="fas fa-file-pdf " </i>'
         );
       }
       
