Verificacion form para crear usuario, agrego html para cambiar contraseña

--- a/src/main/resources/templates/admin_config.html
+++ b/src/main/resources/templates/admin_config.html
@@ -62,56 +62,65 @@
 <div class="container pt-3">
     <div class="row">
         <div class="col-6">
-        <div class="card">
-            <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs" id="lista" role="tablist">
-                <li class="nav-item">
-                <a class="nav-link active" href="#"  aria-selected="true">Ajustes del usuario</a> 
-                </li>
-                <li class="nav-item">
-                <a class="nav-link"  href="/admin/configuracion/agregar_usuario"  aria-selected="false">Administradores del sistema</a>
-                </li>
-                
-            </ul>
-            </div>
-            <div class="card-body">
-            <form th:action="@{/admin/save}" th:object=${user} method="POST">
-                <div class="form-group">
-                    <input type="hidden" th:field="*{id}" id="id">
-                </div>	
-                <div class="form-group">
-                    <label class= "mr-2" for="username">Nombre de usuario:</label>
-                    <input th:value="*{username}" type="text" id="username" name="username" class="form-control"/>
+            <div class="card">
+                <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs" id="lista" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/admin/configuracion"  aria-selected="false">Administradores del sistema</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#"  aria-selected="true">Ajustes del usuario</a> 
+                    </li>
+                </ul>
                 </div>
-                <div class="form-group">
-                    <label class= "mr-2" for="password">Rol</label>
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-hover table-striped">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th></th>Roles</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr  th:each= "roles : ${user.authority}">
-                                    <td th:text="${roles.id}"></td>
-                                    <td th:text="${roles.authority}"></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                <div class="card-body">
+                    <div class="card-header"><h5 th:text=" 'Usuario: ' + ${user.username}"></h5></div>
+                    <div class="row">
+                        <div class="p-2">
+                            <button class="btn btn-primary" onclick="mostrar('cambiarContraseña')"> Cambiar contraseña</button>
+                        </div>
+                        <div class="p-2">
+                            <button class="btn btn-primary" onclick="mostrar('cambiarUserName')"> Cambiar nombre de usuario</button>
+                        </div>
+                    </div>
+                    <div class="card-footer" id="cambiarUserName" style="display:none">
+                        <form>
+                            <div class="form-group">
+                                <label for="password"> Nuevo nombre de Usuario</label>
+                                <input class="form-control" type="password" id="password">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Contraseña</label>
+                                <input class="form-control" type="password" id="password">
+                            </div>
+                        </form>
+
                     </div>
                 </div>   
-            
-                <button type="submit" class="btn btn-primary" >Guardar</button>
-                
-            
-            </form>
-            
-                
+            </div>
         </div>
+        <div class="col-6" style="display:none" id="cambiarContraseña">
+            <div class="card">
+                <div class="card-header">
+                    Cambiar contraseña
+                </div>
+                <div class="card-body">
+                <form>
+                    <div class="form-group">
+                        <label for="password"> Nueva Contraseña</label>
+                        <input class="form-control" type="password" id="password">
+                    </div>
+                    <div class="form-group">
+                        <label for="password"> Contraseña Actual</label>
+                        <input class="form-control" type="password" id="password">
+                    </div>
+                </form>
+                </div>   
+            </div>
+            </div>
         </div>
     </div>
+     
 </div>
 
 </body>
