--- a/src/main/resources/templates/asistencia_clase.html
+++ b/src/main/resources/templates/asistencia_clase.html
@@ -1,146 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Calendar</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <!--Iconos de FontAwesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-    <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/76bcb4e810.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/funciones.js"></script>
     <script src="/showSelector.js"></script>
     <script src="/showSelector.js"></script>
 
-
     <!--tablas-->
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>  
-
-</head>
-<body>
-<div class="container">
-    <div class="card">
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
         <h3 class="card-header" id="monthAndYear"></h3>
         <div class="form-inline pt-2">
-            <button class="btn btn-outline-primary col-sm-6" id="previous" onclick="previous()">Anterior</button>
-            <button class="btn btn-outline-primary col-sm-6" id="next" onclick="next()">Siguiente</button>
+          <button
+            class="btn btn-outline-primary col-sm-6"
+            id="previous"
+            onclick="previous()"
+          >
+            Anterior
+          </button>
+          <button
+            class="btn btn-outline-primary col-sm-6"
+            id="next"
+            onclick="next()"
+          >
+            Siguiente
+          </button>
         </div>
         <div class="container pt-2">
-            <table class="table table-bordered table-responsive-sm" id="calendar">
-                <tr>
-                    <th class="col-1">Domingo</th>
-                    <th class="col-1">Lunes</th>
-                    <th class="col-1">Martes</th>
-                    <th class="col-1">Miércoles</th>
-                    <th class="col-1">Jueves</th>
-                    <th class="col-1">Viernes</th>
-                    <th class="col-1">Sabado</th>
-                </tr>
-                <tbody id="calendar-body">
-
-                </tbody>
-            </table>
+          <table class="table table-bordered table-responsive-sm" id="calendar">
+            <tr>
+              <th class="col-1">Domingo</th>
+              <th class="col-1">Lunes</th>
+              <th class="col-1">Martes</th>
+              <th class="col-1">Miércoles</th>
+              <th class="col-1">Jueves</th>
+              <th class="col-1">Viernes</th>
+              <th class="col-1">Sabado</th>
+            </tr>
+            <tbody id="calendar-body"></tbody>
+          </table>
         </div>
-        
+
         <div class="d-flex">
-                <label class="lead mr-2 ml-2 col-1" for="month">Ir a: </label>
-                <select class="form-control col-5 mr-2" name="month" id="month" onchange="jump()">
-                    <option value=0>Enero</option>
-                    <option value=1>Febrero</option>
-                    <option value=2>Marzo</option>
-                    <option value=3>Abril</option>
-                    <option value=4>Mayo</option>
-                    <option value=5>Junio</option>
-                    <option value=6>Julio</option>
-                    <option value=7>Agosto</option>
-                    <option value=8>Septiembre</option>
-                    <option value=9>Octubre</option>
-                    <option value=10>Noviembre</option>
-                    <option value=11>Diciembre</option>
-                </select>
-                <label for="year"></label>
-                <select class="form-control col-5" name="year" id="year" onchange="jump()">
-                    <option value=2020>2020</option>
-                    <option value=2021>2021</option>
-                    <option value=2022>2022</option>
-                    <option value=2023>2023</option>
-                    <option value=2024>2024</option>
-                    <option value=2025>2025</option>
-                    <option value=2026>2026</option>
-                    <option value=2027>2027</option>
-                    <option value=2028>2028</option>
-                    <option value=2029>2029</option>
-                    <option value=2030>2030</option>
-                </select>
+          <label class="lead mr-2 ml-2 col-1" for="month">Ir a: </label>
+          <select
+            class="form-control col-5 mr-2"
+            name="month"
+            id="month"
+            onchange="jump()"
+          >
+            <option value="0">Enero</option>
+            <option value="1">Febrero</option>
+            <option value="2">Marzo</option>
+            <option value="3">Abril</option>
+            <option value="4">Mayo</option>
+            <option value="5">Junio</option>
+            <option value="6">Julio</option>
+            <option value="7">Agosto</option>
+            <option value="8">Septiembre</option>
+            <option value="9">Octubre</option>
+            <option value="10">Noviembre</option>
+            <option value="11">Diciembre</option>
+          </select>
+          <label for="year"></label>
+          <select
+            class="form-control col-5"
+            name="year"
+            id="year"
+            onchange="jump()"
+          >
+            <option value="2020">2020</option>
+            <option value="2021">2021</option>
+            <option value="2022">2022</option>
+            <option value="2023">2023</option>
+            <option value="2024">2024</option>
+            <option value="2025">2025</option>
+            <option value="2026">2026</option>
+            <option value="2027">2027</option>
+            <option value="2028">2028</option>
+            <option value="2029">2029</option>
+            <option value="2030">2030</option>
+          </select>
         </div>
+      </div>
     </div>
-</div>
 
-<script th:inline="javascript">
-    /*<![CDATA[*/
-    let today = new Date();
-    today.setHours(0,0,0,0);
-    
-    
-    let currentMonth = today.getMonth();
-    let currentYear = today.getFullYear();
-    let selectYear = document.getElementById("year");
-    const days = ['Lunes', 'Martes', 'Miercoles', 'Jueves', 'Viernes', 'Sabado', 'Domingo'];
-    
-    const fechasCompletas =/*[[${fechasCompletas}]]*/ 'defaultanyvalue';
-    const fechasIncompletas =/*[[${fechasIncompletas}]]*/ 'defaultanyvalue';
-    const fechaCreacion =/*[[${fechaCreacion}]]*/ 'defaultanyvalue';
-    const nombresDias =/*[[${nombresDias}]]*/ 'defaultanyvalue';
+    <script th:inline="javascript">
+      /*<![CDATA[*/
+      let today = new Date();
+      today.setHours(0, 0, 0, 0);
 
+      let currentMonth = today.getMonth();
+      let currentYear = today.getFullYear();
+      let selectYear = document.getElementById("year");
+      const days = [
+        "Lunes",
+        "Martes",
+        "Miercoles",
+        "Jueves",
+        "Viernes",
+        "Sabado",
+        "Domingo",
+      ];
 
+      const fechasCompletas = /*[[${fechasCompletas}]]*/ "defaultanyvalue";
+      const faltas = /*[[${faltas}]]*/ "defaultanyvalue";
 
-    let selectMonth = document.getElementById("month");
-    let months = ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Sep", "Octubre", "Noviembre", "Diciembre"];
-    let monthAndYear = document.getElementById("monthAndYear");
-    
-    showCalendar(currentMonth, currentYear);
-    
-    function next() {
-        currentYear = (currentMonth === 11) ? currentYear + 1 : currentYear;
+      let selectMonth = document.getElementById("month");
+      let months = [
+        "Enero",
+        "Febrero",
+        "Marzo",
+        "Abril",
+        "Mayo",
+        "Junio",
+        "Julio",
+        "Agosto",
+        "Sep",
+        "Octubre",
+        "Noviembre",
+        "Diciembre",
+      ];
+      let monthAndYear = document.getElementById("monthAndYear");
+
+      showCalendar(currentMonth, currentYear);
+
+      function next() {
+        currentYear = currentMonth === 11 ? currentYear + 1 : currentYear;
         currentMonth = (currentMonth + 1) % 12;
         showCalendar(currentMonth, currentYear);
-    }
+      }
 
-    function previous() {
-        currentYear = (currentMonth === 0) ? currentYear - 1 : currentYear;
-        currentMonth = (currentMonth === 0) ? 11 : currentMonth - 1;
+      function previous() {
+        currentYear = currentMonth === 0 ? currentYear - 1 : currentYear;
+        currentMonth = currentMonth === 0 ? 11 : currentMonth - 1;
         showCalendar(currentMonth, currentYear);
-    }
+      }
 
-    function jump() {
+      function jump() {
         currentYear = parseInt(selectYear.value);
         currentMonth = parseInt(selectMonth.value);
         showCalendar(currentMonth, currentYear);
-    }
-    function maskDay(dia) {
+      }
+      function maskDay(dia) {
         switch (dia) {
-            case 0:
-                
-                break;
-        
-            default:
-                break;
-        }
-    }
-    
-    function showCalendar(month, year) {
-        let fechasFaltantes = new Array();
-        var dateFaltantes = new Array();
-        var todasLasDate = new Array();
-        var dateCompletas = [];
-        var dateIncompletas = [];
-        var datesPorDiaDeHorario = new Array();
+          case 0:
+            break;
 
-        let firstDay = (new Date(year, month)).getDay();
+          default:
+            break;
+        }
+      }
+
+      function showCalendar(month, year) {
+        let firstDay = new Date(year, month).getDay();
         console.log("el primer dia del mes es: ", firstDay);
 
         let daysInMonth = 32 - new Date(year, month, 32).getDate();
@@ -156,112 +206,65 @@
         // creating all cells
         let date = 1;
         for (let i = 0; i < 6; i++) {
-            // creates a table row
-            let row = document.createElement("tr");
+          // creates a table row
+          let row = document.createElement("tr");
 
-            //creating individual cells, filing them up with data.
-            for (let j = 0; j < 7; j++) {
-                if (i === 0 && j < firstDay) {
-                    let cell = document.createElement("td");
-                    let cellText = document.createTextNode("");
-                    cell.appendChild(cellText);
-                    row.appendChild(cell);
-                }
-                else if (date > daysInMonth) {
-                    break;
-                }
-                
-                else {
-                    if (date <= daysInMonth){
-                        
-                        let indexDate = new Date(year, month, date);
-                        let cell = document.createElement("td");
-                        let cellText = document.createTextNode(date);
-                        let partesCreacion = fechaCreacion.split('-');
-                        let dateCreacion = new Date (partesCreacion[0], partesCreacion[1] - 1, partesCreacion[2]);
-                        var todasArray = new Array();
-                        var horariosDateArray = new Array();
-                       
-                        fechasCompletas.forEach(fecha => {
-                            parts = fecha.split('-');
-                            // Resto porque JS cuenta meses desde 0:
-                            let myDate = new Date(parts[0], parts[1] - 1, parts[2]);
-                            if(!dateCompletas.some(fecha => fecha.getDate === myDate.getDate)){
-                                dateCompletas.push(myDate);
-                                todasLasDate.push(myDate);
-    
-                            }
-                            if (date === myDate.getDate() && year === myDate.getFullYear() && month === myDate.getMonth()) {
-                                cell.classList.add("bg-success");
-                            } // co
-                         });
-                         fechasIncompletas.forEach(fechaIncompleta => {
-                            parts = fechaIncompleta.split('-');
-                            // Resto porque JS cuenta meses desde 0:
-                            let fechaInc = new Date(parts[0], parts[1] - 1, parts[2]);
-                            if(!dateIncompletas.some(fecha => fecha.getDate === fechaInc.getDate)){
-                                dateIncompletas.push(fechaInc);
-                                todasLasDate.push(fechaInc);
-                            }
-                            if (date === fechaInc.getDate() && year === fechaInc.getFullYear() && month === fechaInc.getMonth()) {
-                                cell.classList.add("bg-warning");
-                            } // co
-                            });
-                            
-                            
-                            let dia = days[date];
-                            if(nombresDias.includes(dia)){
-                                if(!datesPorDiaDeHorario.some(fecha => fecha.getDate().toString() === date.toString())){
-                                    datesPorDiaDeHorario.push(indexDate);
-                                }
-                            }
-                            if((indexDate>= dateCreacion) && (indexDate < today)){
-                                
-                               
-            
-                                todasLasDate.forEach(element => {
-                                    todasArray.push(element.getDate());
-                                    
-                                });
-                                datesPorDiaDeHorario.forEach(element => {
-                                    horariosDateArray.push(element.getDate());                                    
-                                });
-                               
-                                horariosConFalta = horariosDateArray.filter(val => !todasArray.includes(val));
-                            
-                                horariosConFalta.forEach(element => {
-                                    if (element === indexDate.getDate() && year === indexDate.getFullYear() && month === indexDate.getMonth()) {
-                                        cell.classList.add("bg-danger");
-                                }
-                                });
-                            
-                            }
-                            
-                            
-                         
-                        cell.appendChild(cellText);
-                        row.appendChild(cell);
-                        date++;
-                    }
-                   
-                }
-               
+          //creating individual cells, filing them up with data.
+          for (let j = 0; j < 7; j++) {
+            if (i === 0 && j < firstDay) {
+              let cell = document.createElement("td");
+              let cellText = document.createTextNode("");
+              cell.appendChild(cellText);
+              row.appendChild(cell);
+            } else if (date > daysInMonth) {
+              break;
+            } else {
+              if (date <= daysInMonth) {
+                let indexDate = new Date(year, month, date);
+                let cell = document.createElement("td");
+                let cellText = document.createTextNode(date);
 
-            
+                fechasCompletas.forEach((fecha) => {
+                  parts = fecha.split("-");
+                  // Resto porque JS cuenta meses desde 0:
+                  let myDate = new Date(parts[0], parts[1] - 1, parts[2]);
+                  if (
+                    date === myDate.getDate() &&
+                    year === myDate.getFullYear() &&
+                    month === myDate.getMonth()
+                  ) {
+                    cell.classList.add("bg-success");
+                  } // co
+                });
+                faltas.forEach((fechaIncompleta) => {
+                  parts = fechaIncompleta.split("-");
+                  // Resto porque JS cuenta meses desde 0:
+                  let fechaInc = new Date(parts[0], parts[1] - 1, parts[2]);
+                  if (
+                    date === fechaInc.getDate() &&
+                    year === fechaInc.getFullYear() &&
+                    month === fechaInc.getMonth()
+                  ) {
+                    cell.classList.add("bg-danger");
+                  } // co
+                });
+
+                cell.appendChild(cellText);
+                row.appendChild(cell);
+                date++;
+              }
             }
+          }
 
-            tbl.appendChild(row); // appending each row into calendar body.
+          tbl.appendChild(row); // appending each row into calendar body.
         }
-        
 
         // console.log("----------break-------");
         // todasLasDate.forEach(element => {
         //    console.log(element) ;
         // });
         /*]]>*/
-    }
-   
-   
-</script>
-</body>
+      }
+    </script>
+  </body>
 </html>
